--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\maria\AppData\Local\Temp\testng-eclipse--722872760\testng-customsuite.xml</span>
+                    <span>C:\Users\maria\AppData\Local\Temp\testng-eclipse--430898105\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="VisualitzarCarritoTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar producte carrito&quot;, &quot;VisualitzarCarrito&quot;)">runScenario("Visualitzar producte carrito", "VisualitzarCarrito")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="VisualitzarCarritoTest" class="method navigator-link" hash-for-method="runScenario(&quot;Visualitzar carrito buit&quot;, &quot;VisualitzarCarrito&quot;)">runScenario("Visualitzar carrito buit", "VisualitzarCarrito")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="ModifyCartQuantityTest" class="method navigator-link" hash-for-method="runScenario(&quot;Modify Cart Quantity&quot;, &quot;ModifyCartQuantity&quot;)">runScenario("Modify Cart Quantity", "ModifyCartQuantity")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,25 +121,15 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">VisualitzarCarritoTest</span>
+              <span class="class-name">ModifyCartQuantityTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Visualitzar producte carrito&quot;, &quot;VisualitzarCarrito&quot;)">
-                  </a> <!-- runScenario("Visualitzar producte carrito", "VisualitzarCarrito") -->
+                  <a name="runScenario(&quot;Modify Cart Quantity&quot;, &quot;ModifyCartQuantity&quot;)">
+                  </a> <!-- runScenario("Modify Cart Quantity", "ModifyCartQuantity") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Visualitzar producte carrito","VisualitzarCarrito")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Visualitzar carrito buit&quot;, &quot;VisualitzarCarrito&quot;)">
-                  </a> <!-- runScenario("Visualitzar carrito buit", "VisualitzarCarrito") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Visualitzar carrito buit","VisualitzarCarrito")</span>
+                  <span class="parameters">("Modify Cart Quantity","ModifyCartQuantity")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -154,7 +139,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\maria\AppData\Local\Temp\testng-eclipse--722872760\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\maria\AppData\Local\Temp\testng-eclipse--430898105\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -163,7 +148,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;VisualitzarCarritoTest&quot;/&gt;
+      &lt;class name=&quot;ModifyCartQuantityTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -211,20 +196,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'VisualitzarCarritoTest')
-data.setCell(0, 3, 5683);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'VisualitzarCarritoTest')
-data.setCell(1, 3, 4223);
+data.setCell(0, 2, 'ModifyCartQuantityTest')
+data.setCell(0, 3, 6915);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -250,22 +231,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">VisualitzarCarritoTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">ModifyCartQuantityTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@4f668f29)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@66420549)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Visualitzar producte carrito", "VisualitzarCarrito")</span>
-                <span class="method-start">275 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("Visualitzar carrito buit", "VisualitzarCarrito")</span>
-                <span class="method-start">5961 ms</span>
+                <span class="method-name">runScenario("Modify Cart Quantity", "ModifyCartQuantity")</span>
+                <span class="method-start">285 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">10188 ms</span>
+                <span class="method-start">7209 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
